--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,11 +10,11 @@
 @import "./components/modal";
 @import "./components/mobile-menu";
 @import "./layouts/header";
-// @import "./layouts/hero";
-// @import "./layouts/features";
-// @import "./layouts/performance";
-// @import "./layouts/team";
-// @import "./layouts/clients";
-// @import "./layouts/footer";
-// @import "./layouts/portfolio/sorting";
-// @import "./layouts/portfolio/portfolio";
+@import "./layouts/hero";
+@import "./layouts/features";
+@import "./layouts/performance";
+@import "./layouts/team";
+@import "./layouts/clients";
+@import "./layouts/footer";
+@import "./layouts/portfolio/sorting";
+@import "./layouts/portfolio/portfolio";
