--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -7,9 +7,13 @@
 }
 .nav {
   display: none;
-  // display: flex;
-  // align-items: center;
-  // width: 100%;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 .logo {
   display: block;
@@ -21,6 +25,10 @@
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 .logo__part {
   color: var(--first-text-color);
@@ -28,11 +36,9 @@
 .site-nav__list {
   display: none;
 
-  // @media screen and (min-width: $tablet) {
-  //   & {
-  //     display: flex;
-  //   }
-  // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 .site-nav__item:not(:first-child) {
   margin-left: 50px;
@@ -74,7 +80,6 @@
 
 .site-nav__link--current {
   color: var(--accent-color);
-
   &::after {
     content: "";
     position: absolute;
@@ -89,30 +94,58 @@
     opacity: 1;
   }
 }
+
 .auth-nav {
   display: none;
-  margin-left: auto;
-  // @media screen and (min-width: $tablet) {
-  //   & {
-  //     display: flex;
-  //   }
-  // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
 }
-.auth-nav__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .auth-nav__item:not(:first-child) {
+    margin-left: 50px;
+  }
+  .auth-nav__link {
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 .auth-nav__icon {
   margin-right: 10px;
   fill: currentColor;
 }
+@media screen and (min-width: 768px) {
+  .auth-nav__link--mail {
+    padding-top: 20px;
+  }
+  .auth-nav__link--tel {
+    padding-bottom: 20px;
+  }
+}
+// @media screen and (max-width: 767.98px) {
+//   .auth-nav__link--mail {
+//     font-size: 24px;
+//     line-height: 1.16;
+//   }
+//   .auth-nav__link--tel {
+//     color: #2196f3;
+//     font-size: 34px;
+//     line-height: 1.16;
+//   }
+// }
+
 .auth-nav__link {
   display: flex;
   color: var(--secondary-text-color);
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
