--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -111,7 +111,6 @@
     margin-left: 50px;
   }
   .auth-nav__link {
-    display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -120,26 +119,12 @@
   margin-right: 10px;
   fill: currentColor;
 }
-@media screen and (min-width: 768px) {
-  .auth-nav__link--mail {
-    padding-top: 20px;
-  }
-  .auth-nav__link--tel {
-    padding-bottom: 20px;
+
+@media screen and (max-width: 1199.5px) {
+  .auth-nav__item:nth-child(1) {
+    margin-bottom: 10px;
   }
 }
-// @media screen and (max-width: 767.98px) {
-//   .auth-nav__link--mail {
-//     font-size: 24px;
-//     line-height: 1.16;
-//   }
-//   .auth-nav__link--tel {
-//     color: #2196f3;
-//     font-size: 34px;
-//     line-height: 1.16;
-//   }
-// }
-
 .auth-nav__link {
   display: flex;
   color: var(--secondary-text-color);
@@ -155,5 +140,15 @@
   &:hover::after,
   &:focus::after {
     transform: scaleX(1);
+  }
+}
+@media screen and (max-width: 1199.5px) {
+  .auth-nav__link--mail {
+    padding-top: 21px;
+    line-height: 1.16;
+  }
+  .auth-nav__link--tel {
+    padding-bottom: 21px;
+    line-height: 1.16;
   }
 }
