--- a/css/main.css
+++ b/css/main.css
@@ -651,8 +651,8 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  height: 600px;
-  max-width: 1600px;
+  min-height: 400px;
+  min-width: 480px;
   margin-bottom: 0;
   margin-top: 0;
   margin-left: auto;
