--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,8 +9,8 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero.jpg);
-  height: 600px;
-  max-width: 1600px;
+  min-height: 400px;
+  min-width: 480px;
   margin-bottom: 0;
   margin-top: 0;
   margin-left: auto;
