--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ img {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 101;
 }
 
 .is-hidden {
@@ -146,7 +147,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   background-color: var(--basic-color-white);
-  width: 528px;
+  width: 450px;
   min-height: 581px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -156,6 +157,11 @@ img {
   transform: scale(1.1) translate(-50%, -50%);
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
+}
 .modal__close-btn {
   position: absolute;
   right: 8px;
@@ -180,13 +186,18 @@ img {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin-bottom: 12px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal__text {
+    line-height: 1.15;
+  }
+}
 /*  ---------- form--------- */
 .input-container {
   display: flex;
@@ -650,32 +661,42 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  min-height: 400px;
-  min-width: 480px;
   margin-bottom: 0;
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 0;
+  text-align: center;
+  max-width: 360px;
   margin-top: 0;
-  width: 696px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
+}
 .features__title {
   font-weight: 700;
   line-height: 1.14;
