--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 101;
 }
 .is-hidden {
   visibility: 0;
@@ -21,13 +22,19 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   background-color: var(--basic-color-white);
-  width: 528px;
+  width: 450px;
+  // width: 528px;
   min-height: 581px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
   .is-hidden & {
     transform: scale(1.1) translate(-50%, -50%);
+  }
+}
+@media screen and (min-width: $desktop) {
+  .modal {
+    width: 528px;
   }
 }
 .modal__close-btn {
@@ -55,11 +62,16 @@
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin-bottom: 12px;
+}
+@media screen and (min-width: $desktop) {
+  .modal__text {
+    line-height: 1.15;
+  }
 }
 /*  ---------- form--------- */
 
