--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ img {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 101;
+  overflow-y: scroll;
 }
 
 .is-hidden {
@@ -147,11 +148,13 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   background-color: var(--basic-color-white);
-  width: 450px;
-  min-height: 581px;
+  max-width: 450px;
+  width: 100%;
+  max-height: 609px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+  overflow: auto;
 }
 .is-hidden .modal {
   transform: scale(1.1) translate(-50%, -50%);
@@ -159,7 +162,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
+    height: 581px;
   }
 }
 .modal__close-btn {
@@ -306,8 +310,8 @@ img {
 .policy-link {
   text-decoration: underline;
   color: var(--accent-color);
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
@@ -317,12 +321,18 @@ img {
   justify-content: center;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .license-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
 .policy-container {
   padding-bottom: 0;
   margin-bottom: 30px;
@@ -407,7 +417,7 @@ img {
     letter-spacing: 0.02em;
     background: var(--basic-color-white);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-    height: 100%;
+    overflow: auto;
   }
   .menu__container.is-open {
     display: flex;
@@ -694,34 +704,66 @@ img {
   .hero__title {
     font-size: 44px;
     line-height: 1.36;
-    width: 696px;
+    max-width: 696px;
   }
 }
 .features__title {
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
+  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
+@media screen and (min-width: 768px) {
+  .features__title {
+    text-align: left;
+  }
+}
 
 .features__text {
   font-weight: 400;
+  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
-.features__list {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
-
 .features__item {
-  width: 270px;
+  max-width: 450px;
 }
 .features__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .features__item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__item {
+    max-width: 270px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features__item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__item {
+    margin-right: 30px;
+    flex-wrap: nowrap;
+  }
 }
 
 .features__icon-container {
