--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,17 +2,17 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  @media screen and (min-width: $mobile) {
+  @media screen and (min-width: 480px) {
     & {
       width: 480px;
     }
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     & {
       width: 768px;
     }
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     & {
       width: 1200px;
     }
