--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -60,7 +60,7 @@
     background: var(--basic-color-white);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 1px 3px rgba(0, 0, 0, 0.16);
-    height: 100%;
+    overflow: auto;
     &.is-open {
       display: flex;
       flex-direction: column;
