--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,7 @@
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 101;
+  overflow-y: scroll;
 }
 .is-hidden {
   visibility: 0;
@@ -22,19 +23,21 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   background-color: var(--basic-color-white);
-  width: 450px;
-  // width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  width: 100%;
+  max-height: 609px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+  overflow: auto;
   .is-hidden & {
     transform: scale(1.1) translate(-50%, -50%);
   }
 }
 @media screen and (min-width: $desktop) {
   .modal {
-    width: 528px;
+    max-width: 528px;
+    height: 581px;
   }
 }
 .modal__close-btn {
@@ -176,8 +179,10 @@
 .policy-link {
   text-decoration: underline;
   color: var(--accent-color);
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
+  // font-size: 14px;
+  // line-height: 1.71;
   letter-spacing: 0.03em;
 }
 .license-text {
@@ -186,10 +191,16 @@
   justify-content: center;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .license-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .policy-container {
   padding-bottom: 0;
