--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,25 +1,54 @@
 .features__title {
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
+  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  @media screen and( min-width:768px) {
+    text-align: left;
+  }
 }
 .features__text {
   font-weight: 400;
+  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
-.features__list {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and( min-width:768px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    // .features__item:not(:last-child) {
+    //   margin-right: 30px;
+    // }
+  }
+}
+// .features__list {
+// }
+.features__item {
+  max-width: 450px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  @media screen and( min-width:768px) {
+    max-width: 354px;
+  }
+  @media screen and( min-width:1200px) {
+    max-width: 270px;
+  }
+}
+.features__item:nth-child(2n + 1) {
+  @media screen and( min-width:768px) {
+    margin-right: 30px;
+  }
 }
 .features__item {
-  width: 270px;
-
-  &:not(:last-child) {
+  @media screen and( min-width:1200px) {
     margin-right: 30px;
+    flex-wrap: nowrap;
   }
 }
 .features__icon-container {
