--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -38,6 +38,14 @@
   }
   @media screen and( min-width:1200px) {
     max-width: 270px;
+    margin-bottom: 0;
+    flex-wrap: nowrap;
+  }
+  @media screen and( min-width:1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+      margin-bottom: 0;
+    }
   }
 }
 .features__item:nth-child(2n + 1) {
@@ -45,12 +53,18 @@
     margin-right: 30px;
   }
 }
-.features__item {
-  @media screen and( min-width:1200px) {
-    margin-right: 30px;
-    flex-wrap: nowrap;
+.features__item:nth-child(n + 3) {
+  @media screen and( min-width:768px) {
+    margin-bottom: 0px;
   }
 }
+
+// .features__item {
+//   @media screen and( min-width:1200px) {
+//     margin-right: 30px;
+//     flex-wrap: nowrap;
+//   }
+// }
 .features__icon-container {
   height: 120px;
   display: flex;
