--- a/sass/layouts/_performance.scss
+++ b/sass/layouts/_performance.scss
@@ -1,3 +1,12 @@
+.performance {
+  display: none;
+  padding-top: 0;
+}
+@media screen and (min-width: 1200px) {
+  .performance {
+    display: block;
+  }
+}
 .performance__title {
   font-weight: 700;
   font-size: 36px;
@@ -6,9 +15,7 @@
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
-.performance {
-  padding-top: 0;
-}
+
 .performance__thumb {
   position: relative;
 }
