--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,7 +1,5 @@
 .team {
   background-color: var(--btn-background);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 .team__title {
   font-style: normal;
@@ -14,19 +12,21 @@
   text-align: center;
 }
 .team__list {
-  display: flex;
+  // display: flex;
 }
 .team__item {
+  max-width: 450px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--basic-color-white);
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
+    // margin-right: 30px;
   }
 }
 .team__information-block {
-  padding: 30px;
+  padding: 30px 0px;
 }
 .team__name {
   margin-bottom: 10px;
@@ -48,11 +48,12 @@
 }
 .social-links {
   display: flex;
-  padding-left: 0;
+  justify-content: center;
+  align-items: center;
 }
-.social-links__item:not(:last-child) {
-  margin-right: 10px;
-}
+// .social-links__item:not(:last-child) {
+//   margin-right: 10px;
+// }
 .social-links__link {
   display: flex;
   width: 44px;
