--- a/css/main.css
+++ b/css/main.css
@@ -839,12 +839,23 @@ img {
 .team__title {
   font-style: normal;
   font-size: 36px;
-  color: var(--first-text-color);
   margin-bottom: 50px;
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-align: center;
+}
+
+.team__list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+  }
 }
 
 .team__item {
@@ -856,9 +867,38 @@ img {
 .team__item:not(:last-child) {
   margin-bottom: 30px;
 }
+@media screen and (min-width: 768px) {
+  .team__item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    max-width: 270px;
+  }
+  .team__item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item:nth-child(n+3) {
+    margin-bottom: 0px;
+  }
+}
 
 .team__information-block {
   padding: 30px 0px;
+}
+@media screen and (min-width: 1200px) {
+  .team__information-block {
+    padding: 30px;
+  }
 }
 
 .team__name {
@@ -885,6 +925,10 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.social-links__item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .social-links__link {
