--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -4,7 +4,7 @@
 .team__title {
   font-style: normal;
   font-size: 36px;
-  color: var(--first-text-color);
+
   margin-bottom: 50px;
   font-weight: 700;
   line-height: 1.14;
@@ -12,7 +12,15 @@
   text-align: center;
 }
 .team__list {
-  // display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width: 768px) {
+    & {
+      display: flex;
+    }
+  }
 }
 .team__item {
   max-width: 450px;
@@ -24,9 +32,39 @@
     margin-bottom: 30px;
     // margin-right: 30px;
   }
+  &:nth-child(2n + 1) {
+    @media screen and( min-width:768px) {
+      margin-right: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    & {
+      max-width: 354px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    & {
+      max-width: 270px;
+    }
+    &:not(:last-child) {
+      margin-right: 30px;
+      margin-bottom: 0px;
+    }
+  }
+  &:nth-child(n + 3) {
+    @media screen and( min-width:768px) {
+      margin-bottom: 0px;
+    }
+  }
 }
+
 .team__information-block {
   padding: 30px 0px;
+  @media screen and (min-width: 1200px) {
+    & {
+      padding: 30px;
+    }
+  }
 }
 .team__name {
   margin-bottom: 10px;
@@ -51,9 +89,9 @@
   justify-content: center;
   align-items: center;
 }
-// .social-links__item:not(:last-child) {
-//   margin-right: 10px;
-// }
+.social-links__item:not(:last-child) {
+  margin-right: 10px;
+}
 .social-links__link {
   display: flex;
   width: 44px;
