Додає секцію клієнти

--- a/css/main.css
+++ b/css/main.css
@@ -953,20 +953,46 @@ img {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    flex-wrap: nowrap;
+  }
 }
 
-.clients__item:not(:last-child) {
+.clients__item {
+  flex-basis: calc((100% - 30px) / 2);
+  margin-right: 0;
+}
+.clients__item:nth-child(odd) {
   margin-right: 30px;
+}
+.clients__item:not(:nth-child(n+4)) {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    max-width: 226px;
+    margin-right: 0px;
+    margin-bottom: 0;
+  }
 }
 
 .clients__link {
   display: flex;
-  width: 170px;
   height: 92px;
   justify-content: center;
   align-items: center;
