--- a/css/main.css
+++ b/css/main.css
@@ -955,39 +955,43 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+  }
+}
 
 .clients__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: -15px;
 }
 @media screen and (min-width: 1200px) {
   .clients__list {
     flex-wrap: nowrap;
+    margin: 0;
   }
 }
 
 .clients__item {
-  flex-basis: calc((100% - 30px) / 2);
-  margin-right: 0;
+  flex-basis: calc((100% - 60px) / 2);
+  margin: 15px;
 }
-.clients__item:nth-child(odd) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .clients__item {
+    flex-basis: 226px;
+  }
 }
-.clients__item:not(:nth-child(n+4)) {
-  margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    flex-basis: 170px;
+    margin: 0;
+  }
 }
 @media screen and (min-width: 1200px) {
   .clients__item:not(:last-child) {
     margin-right: 30px;
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 768px) {
-  .clients__item {
-    max-width: 226px;
-    margin-right: 0px;
-    margin-bottom: 0;
   }
 }
 
@@ -1010,17 +1014,35 @@ img {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  display: flex;
   background-color: var(--second-background-color);
 }
 
 .footer__container {
-  display: flex;
-  align-items: baseline;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
-.footer__addres {
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .footer__addres {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__addres {
+    margin-right: 70px;
+  }
 }
 
 .footer__logo {
@@ -1028,9 +1050,16 @@ img {
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .footer__logo-part {
@@ -1039,6 +1068,15 @@ img {
 
 .address {
   margin-top: 20px;
+}
+
+.address__list {
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .address__list {
+    margin-bottom: 0;
+  }
 }
 
 .address__link {
@@ -1056,7 +1094,12 @@ img {
 }
 
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .address__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .address__text {
@@ -1069,11 +1112,19 @@ img {
 }
 
 .contact-footer {
-  margin-right: auto;
+  margin-bottom: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .contact-footer {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
 }
 
 .contact-footer__list {
   display: flex;
+  justify-content: center;
 }
 
 .contact-footer__text {
@@ -1112,18 +1163,36 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--basic-color-white);
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__text {
+    text-align: left;
+    display: block;
+  }
 }
 
 .subscribe__form {
   margin-top: 20px;
-  margin-left: 0;
+}
+@media screen and (min-width: 768px) {
+  .subscribe__form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
 }
 
 .subscribe__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  margin-right: 10px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -1142,6 +1211,18 @@ img {
   color: rgba(255, 255, 255, 0.6);
   padding-top: 15px;
   padding-bottom: 15px;
+}
+@media screen and (min-width: 768px) {
+  .subscribe__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    margin-right: 12px;
+    width: 358px;
+    margin-bottom: 0;
+  }
 }
 
 .button__subscribe {
