--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -6,51 +6,48 @@
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 30px;
-  // margin-bottom: 50px;
+  @media screen and( min-width:1200px) {
+    & {
+      margin-bottom: 50px;
+    }
+  }
 }
+
 .clients__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: -15px;
   @media screen and( min-width:1200px) {
     & {
       flex-wrap: nowrap;
+      margin: 0;
     }
   }
 }
 
-// .clients__item:not(:last-child)
-// margin-right: 30px;
-
 .clients__item {
-  flex-basis: calc((100% - 30px) / 2);
-  // min-width: 210px;
+  flex-basis: calc((100% - 60px) / 2);
+  margin: 15px;
 
-  margin-right: 0;
-  // &:not(:last-child) {
-  //   margin-bottom: 30px;
-  // }
-  &:nth-child(odd) {
-    margin-right: 30px;
+  @media screen and (min-width: 768px) {
+    & {
+      flex-basis: 226px;
+    }
   }
-  &:not(:nth-child(n + 4)) {
-    margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    & {
+      flex-basis: 170px;
+      margin: 0;
+    }
   }
   @media screen and( min-width:1200px) {
     &:not(:last-child) {
       margin-right: 30px;
-      margin-bottom: 0;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    & {
-      max-width: 226px;
-      margin-right: 0px;
-      margin-bottom: 0;
     }
   }
 }
+
 .clients__link {
   display: flex;
   height: 92px;
