--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,30 +1,53 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  display: flex;
   background-color: var(--second-background-color);
 }
 .footer__container {
-  display: flex;
-  align-items: baseline;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer__addres {
-  margin-right: 70px;
+  @media screen and (min-width: 768px) {
+    margin-right: 165px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 .footer__logo {
   display: block;
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .footer__logo-part {
   color: var(--basic-color-white);
 }
 .address {
   margin-top: 20px;
+}
+.address__list {
+  margin-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 .address__link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -39,7 +62,11 @@
   color: var(--accent-color);
 }
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
 .address__text {
   font-weight: 400;
@@ -51,10 +78,16 @@
 }
 
 .contact-footer {
-  margin-right: auto;
+  margin-bottom: 60px;
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
 }
 .contact-footer__list {
   display: flex;
+  justify-content: center;
 }
 .contact-footer__text {
   font-style: normal;
@@ -83,7 +116,6 @@
     background-color: var(--accent-color);
   }
 }
-
 .subscribe__text {
   font-style: normal;
   font-weight: 700;
@@ -91,16 +123,30 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--basic-color-white);
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+    display: block;
+  }
 }
 .subscribe__form {
   margin-top: 20px;
-  margin-left: 0;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
 }
+// .subscribe__label {
+// }
 .subscribe__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  margin-right: 10px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -119,6 +165,14 @@
     color: rgba(255, 255, 255, 0.6);
     padding-top: 15px;
     padding-bottom: 15px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 12px;
+    width: 358px;
+    margin-bottom: 0;
   }
 }
 .button__subscribe {
