--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,7 @@ img {
   border: none;
   background-color: rgba(0, 0, 0, 0);
   margin-left: auto;
-  z-index: 100;
+  z-index: 999;
 }
 @media screen and (min-width: 768px) {
   .menu__button {
@@ -405,12 +405,12 @@ img {
   .menu__container {
     display: none;
     position: fixed;
+    z-index: 100;
     top: 0;
     width: 100vw;
     height: 100vh;
     left: 0;
     padding: 48px 10px 48px 40px;
-    left: 0;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
@@ -1241,18 +1241,25 @@ img {
 
 .sorting__list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: -8px;
   margin-bottom: 50px;
 }
+@media screen and (min-width: 768px) {
+  .sorting__list {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
 
-.sorting__item:not(:first-child) {
-  margin-left: 8px;
+.sorting__item {
+  margin: 8px;
 }
 
 .sorting__btn,
 .sorting__btn--current {
   min-width: 73px;
-  padding: 6px 22px;
   background-color: var(--btn-background);
   color: var(--first-text-color);
   box-shadow: none;
@@ -1261,6 +1268,12 @@ img {
   letter-spacing: 0.03em;
   border: 1px solid transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .sorting__btn,
+.sorting__btn--current {
+    padding: 6px 22px;
+  }
 }
 
 .sorting__btn:hover,
@@ -1278,19 +1291,23 @@ img {
 
 .portfolio__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: -30px;
+    justify-content: flex-start;
+  }
 }
 
-.portfolio__item {
-  margin-bottom: 30px;
-}
-
-.portfolio__item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.portfolio__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    margin: 30px;
+  }
 }
 
 .portfolio__link {
@@ -1302,11 +1319,17 @@ img {
 .portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+@media screen and (min-width: 768px) {
+  .portfolio__link {
+    width: 354px;
+  }
+}
 
 .portfolio__inform-block {
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+  flex-grow: 1;
 }
 
 .portfolio__title {
@@ -1331,7 +1354,7 @@ img {
   left: 0;
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  width: 370px;
+  width: 450px;
   height: 294px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1339,10 +1362,22 @@ img {
 .portfolio__link:hover .overlay, .portfolio__link:focus .overlay {
   transform: translateY(0);
 }
+@media screen and (min-width: 768px) {
+  .overlay {
+    width: 354px;
+  }
+}
 
 .portfolio__thumb {
   position: relative;
+  z-index: 1;
   overflow: hidden;
+  width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__thumb {
+    max-width: 354px;
+  }
 }
 
 .overlay__text {
