--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -1,16 +1,29 @@
 .portfolio__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: -30px;
+    justify-content: flex-start;
+  }
 }
 .portfolio__item {
-  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    margin: 30px;
+  }
+  // margin: 30px;
 }
-.portfolio__item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.portfolio__item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+
+// .portfolio__item:not(:nth-child(3n)) {
+//   margin-right: 30px;
+// }
+// .portfolio__item:nth-last-child(-n + 3) {
+//   margin-bottom: 0;
+// }
 .portfolio__link {
   display: block;
   background-color: var(--basic-color-white);
@@ -21,11 +34,15 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
 }
 .portfolio__inform-block {
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+  flex-grow: 1;
 }
 .portfolio__title {
   font-weight: 700;
@@ -47,7 +64,7 @@
   left: 0;
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  width: 370px;
+  width: 450px;
   height: 294px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -55,10 +72,18 @@
   .portfolio__link:focus & {
     transform: translateY(0);
   }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
 }
 .portfolio__thumb {
   position: relative;
+  z-index: 1;
   overflow: hidden;
+  width: 450px;
+  @media screen and (min-width: 768px) {
+    max-width: 354px;
+  }
 }
 .overlay__text {
   font-style: normal;
