--- a/css/main.css
+++ b/css/main.css
@@ -1299,19 +1299,16 @@ img {
   .portfolio__list {
     flex-wrap: wrap;
     flex-direction: row;
-    margin: -30px;
     justify-content: flex-start;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio__item {
-    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 30px;
   }
 }
 
 .portfolio__link {
   display: block;
+  width: 450px;
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1329,12 +1326,13 @@ img {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  flex-grow: 1;
+  height: 146px;
 }
 
 .portfolio__title {
   font-weight: 700;
   font-size: 18px;
+  margin-bottom: 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   font-style: normal;
@@ -1354,7 +1352,7 @@ img {
   left: 0;
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  width: 450px;
+  width: 100%;
   height: 294px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1362,22 +1360,12 @@ img {
 .portfolio__link:hover .overlay, .portfolio__link:focus .overlay {
   transform: translateY(0);
 }
-@media screen and (min-width: 768px) {
-  .overlay {
-    width: 354px;
-  }
-}
 
 .portfolio__thumb {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  width: 450px;
-}
-@media screen and (min-width: 768px) {
-  .portfolio__thumb {
-    max-width: 354px;
-  }
+  width: 100%;
 }
 
 .overlay__text {
