--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -7,15 +7,15 @@
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
     flex-direction: row;
-    margin: -30px;
     justify-content: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 30px;
   }
 }
 .portfolio__item {
   @media screen and (min-width: 768px) {
-    margin: 30px;
   }
-  // margin: 30px;
 }
 
 // .portfolio__item:not(:nth-child(3n)) {
@@ -26,6 +26,7 @@
 // }
 .portfolio__link {
   display: block;
+  width: 450px;
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -42,11 +43,12 @@
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  flex-grow: 1;
+  height: 146px;
 }
 .portfolio__title {
   font-weight: 700;
   font-size: 18px;
+  margin-bottom: 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   font-style: normal;
@@ -64,7 +66,7 @@
   left: 0;
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  width: 450px;
+  width: 100%;
   height: 294px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -72,18 +74,12 @@
   .portfolio__link:focus & {
     transform: translateY(0);
   }
-  @media screen and (min-width: 768px) {
-    width: 354px;
-  }
 }
 .portfolio__thumb {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  width: 450px;
-  @media screen and (min-width: 768px) {
-    max-width: 354px;
-  }
+  width: 100%;
 }
 .overlay__text {
   font-style: normal;
