--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -21,6 +21,7 @@
   }
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
+    text-align: left;
   }
 }
 .footer__logo {
@@ -83,6 +84,7 @@
   @media screen and (min-width: 1200px) {
     margin-right: auto;
     margin-bottom: 0;
+    text-align: left;
   }
 }
 .contact-footer__list {
