--- a/css/main.css
+++ b/css/main.css
@@ -622,7 +622,6 @@ img {
   .auth-nav__item:not(:first-child) {
     margin-left: 50px;
   }
-
   .auth-nav__link {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -659,7 +658,6 @@ img {
     padding-top: 21px;
     line-height: 1.16;
   }
-
   .auth-nav__link--tel {
     padding-bottom: 21px;
     line-height: 1.16;
@@ -1323,7 +1321,8 @@ img {
 }
 
 .portfolio__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background-color: var(--basic-color-white);
   cursor: pointer;
@@ -1334,10 +1333,10 @@ img {
 }
 
 .portfolio__inform-block {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  height: 146px;
 }
 
 .portfolio__title {
@@ -1374,9 +1373,7 @@ img {
 
 .portfolio__thumb {
   position: relative;
-  z-index: 1;
   overflow: hidden;
-  width: 100%;
 }
 
 .overlay__text {
