--- a/css/main.css
+++ b/css/main.css
@@ -554,14 +554,13 @@ img {
 
 .site-nav__link {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 25px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--first-text-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  height: 100%;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -655,11 +654,11 @@ img {
 
 @media screen and (max-width: 1199.5px) {
   .auth-nav__link--mail {
-    padding-top: 21px;
+    padding-top: 20px;
     line-height: 1.16;
   }
   .auth-nav__link--tel {
-    padding-bottom: 21px;
+    padding-bottom: 20px;
     line-height: 1.16;
   }
 }
@@ -669,6 +668,7 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   margin-bottom: 0;
   margin-top: 0;
   margin-left: auto;
