--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -35,7 +35,6 @@
 }
 .site-nav__list {
   display: none;
-
   @media screen and (min-width: 768px) {
     display: flex;
   }
@@ -45,14 +44,13 @@
 }
 .site-nav__link {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 25px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--first-text-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  height: 100%;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &::after {
@@ -144,11 +142,11 @@
 }
 @media screen and (max-width: 1199.5px) {
   .auth-nav__link--mail {
-    padding-top: 21px;
+    padding-top: 20px;
     line-height: 1.16;
   }
   .auth-nav__link--tel {
-    padding-bottom: 21px;
+    padding-bottom: 20px;
     line-height: 1.16;
   }
 }
