колір в кнопки закрити модалку\\\тест

--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,10 @@ img {
   fill: var(--accent-color);
 }
 
+.modal__icon {
+  fill: #000000;
+}
+
 .modal__text {
   font-style: normal;
   font-weight: 700;
