--- a/css/main.css
+++ b/css/main.css
@@ -160,11 +160,6 @@ img {
   transform: scale(1.1) translate(-50%, -50%);
 }
 
-.modal.is-hidden .menu-icon,
-.cross-icon {
-  display: block;
-}
-
 @media screen and (min-width: 1200px) {
   .modal {
     max-width: 528px;
@@ -187,12 +182,8 @@ img {
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal__close-btn:hover, .modal__close-btn:focus {
+.modal__close-btn:hover, .modal__close-btn:focus .modal__icon {
   fill: var(--accent-color);
-}
-
-.modal__icon {
-  fill: #000000;
 }
 
 .modal__text {
@@ -447,7 +438,7 @@ img {
 .menu__nav-link {
   color: var(--first-text-color);
 }
-.menu__nav-link:hover, .menu__nav-link:hover {
+.menu__nav-link:hover, .menu__nav-link:focus {
   color: var(--accent-color);
 }
 
@@ -693,6 +684,7 @@ img {
   background-position: center;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1600px;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
@@ -878,12 +870,19 @@ img {
 
 .team__title {
   font-style: normal;
-  font-size: 36px;
-  margin-bottom: 50px;
+  font-size: 28px;
+  line-height: 1.18;
+  margin-bottom: 30px;
   font-weight: 700;
-  line-height: 1.14;
   letter-spacing: 0.03em;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.14;
+  }
 }
 
 .team__list {
@@ -989,8 +988,8 @@ img {
 .clients__title {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 30px;
@@ -998,6 +997,8 @@ img {
 @media screen and (min-width: 1200px) {
   .clients__title {
     margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
   }
 }
 
@@ -1059,6 +1060,7 @@ img {
 
 .footer__container {
   text-align: center;
+  align-items: baseline;
 }
 @media screen and (min-width: 768px) {
   .footer__container {
@@ -1070,13 +1072,16 @@ img {
 @media screen and (min-width: 1200px) {
   .footer__container {
     display: flex;
-    align-items: baseline;
   }
 }
 
+.footer__addres {
+  margin-bottom: 60px;
+}
 @media screen and (min-width: 768px) {
   .footer__addres {
     margin-right: 165px;
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1111,9 +1116,6 @@ img {
   margin-top: 20px;
 }
 
-.address__list {
-  margin-bottom: 60px;
-}
 @media screen and (min-width: 1200px) {
   .address__list {
     margin-bottom: 0;
@@ -1161,6 +1163,11 @@ img {
     margin-right: auto;
     margin-bottom: 0;
     text-align: left;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact-footer {
+    margin-bottom: 0;
   }
 }
 
@@ -1211,6 +1218,17 @@ img {
   .subscribe__text {
     text-align: left;
     display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    margin-top: 0;
   }
 }
 
