--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -34,10 +34,7 @@
     transform: scale(1.1) translate(-50%, -50%);
   }
 }
-.modal.is-hidden .menu-icon,
-.cross-icon {
-  display: block;
-}
+
 @media screen and (min-width: 1200px) {
   .modal {
     max-width: 528px;
@@ -60,13 +57,11 @@
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
-  &:focus {
+  &:focus .modal__icon {
     fill: var(--accent-color);
   }
 }
-.modal__icon {
-  fill: #000000;
-}
+
 .modal__text {
   font-style: normal;
   font-weight: 700;
