--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,6 +5,7 @@
 }
 .footer__container {
   text-align: center;
+  align-items: baseline;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -12,12 +13,13 @@
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    align-items: baseline;
   }
 }
 .footer__addres {
+  margin-bottom: 60px;
   @media screen and (min-width: 768px) {
     margin-right: 165px;
+    margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
@@ -45,7 +47,6 @@
   margin-top: 20px;
 }
 .address__list {
-  margin-bottom: 60px;
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
   }
@@ -85,6 +86,9 @@
     margin-right: auto;
     margin-bottom: 0;
     text-align: left;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
 .contact-footer__list {
@@ -129,6 +133,14 @@
   @media screen and (min-width: 1200px) {
     text-align: left;
     display: block;
+  }
+}
+.subscribe {
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
   }
 }
 .subscribe__form {
