--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,6 +6,7 @@
   background-position: center;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1600px;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
@@ -43,6 +44,7 @@
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
+
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
