--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -3,13 +3,17 @@
 }
 .team__title {
   font-style: normal;
-  font-size: 36px;
-
-  margin-bottom: 50px;
+  font-size: 28px;
+  line-height: 1.18;
+  margin-bottom: 30px;
   font-weight: 700;
-  line-height: 1.14;
   letter-spacing: 0.03em;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.14;
+  }
 }
 .team__list {
   display: flex;
